Bug 376848 - Folder View not rendering images correctly.
Summary: Folder View not rendering images correctly.
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2017-02-23 15:05 UTC by Tony
Modified: 2018-03-15 19:46 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Not rendering corrently (2.45 MB, image/png)
2017-02-23 15:05 UTC, Tony
Details
Screenshot (79.92 KB, image/png)
2017-04-08 16:39 UTC, Martin Klapetek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tony 2017-02-23 15:05:11 UTC
Created attachment 104188 [details]
Not rendering corrently

While "Folder View" is set as desktop layout images are not rendered correctly.

Check attachment.

plasma-workspace:                                                                                                   
  Installed: 4:5.9.1+p16.04+git20170208.1904-0                                                                      
  Candidate: 4:5.9.1+p16.04+git20170208.1904-0 
plasma-desktop:
  Installed: 4:5.9.2+p16.04+git20170223.0603-0
  Candidate: 4:5.9.2+p16.04+git20170223.0603-0
Comment 1 Marco Martin 2017-03-06 16:02:41 UTC
pixelated thumbnails?
Comment 2 Eike Hein 2017-03-06 20:55:18 UTC
What's the issue exactly? I don't see a problem on the screenshot.
Comment 3 Christoph Feck 2017-03-06 23:05:50 UTC
There are two thumbnails at the right-hand side (inside the black area), which really look pixelated.
Comment 4 Tony 2017-03-07 14:35:24 UTC
(In reply to Marco Martin from comment #1)
> pixelated thumbnails?

Yes. Thumbnails of images on the desktop are pixelated even if you set the icons size to max.

I also notice it happens for some video files with ".avi" extension.
Comment 5 Martin Klapetek 2017-04-08 16:39:41 UTC
Created attachment 104924 [details]
Screenshot

I can confirm the pixelation in previews, see
the attached screenshot (compare with the sharp
icons around). This is the case with all previews
as far as I can tell.
Comment 6 Kai Uwe Broulik 2017-04-08 16:42:42 UTC
Setting smooth to true in the IconItem should help but the item view adapter needs to be adjusted for the new non-square area the icon can have - so far it only requests e.g. 64x64 previews leading to small thumbs being scaled up.
Comment 7 lctrgk 2017-07-03 04:35:03 UTC
Hi, i've always noticed this too and when it's not a big deal it's kind of annoying. I'm using plasma 5 since the version 5.5 and this problem has always been there. Thumbnails on the desktop view looks blocky (which is not necessarily the same as pixelated). This doesn't happen to icons, for example if you create an access to a program from the launcher (for axample a .desktop) it'll be smooth regardless of if it's a vector or raster image. However if you put that same image on the desktop view alongside the .desktop file the difference is noticeable. I think it has something to do with the aspect ratio of the image because it the image is 1:1 it looks a lot better.

I think this should be investigated in a similar way this other bug was fixed:
https://bugs.kde.org/show_bug.cgi?id=355592

I noticed the same thing can happen on other places aside from the desktop view, for example the user avatar on the default launcher or the user selection plasmoid.
Comment 8 Gerhard Dittes 2017-09-14 16:04:23 UTC
Hi, I can confirm this behavior (e.g. on "current KDE Neon Dev Stable", newest plasma-framework version).

Seems that Kai Uwe already found the right location for fixing this. @Kai Uwe: Do you have time to take care of this? ;-)

Anyway, this bug should be marked as "CONFIRMED". Furthermore, it should really get attention:

Desktop icons are such an important thing (and [as everybody might know] as of plasma 5.10 they are turned on by default (again)).

Pixelated previews really look ugly and make the whole Desktop appear kind of buggy (imho)...

Thx for taking care...
Comment 9 Gerhard Dittes 2017-11-23 09:34:37 UTC
Hi,

any news on this?  It would be very nice to have this fixed/improved for the upcoming version of Plasma LTS...

I see this issue every time I look at my desktop and it really feels so obviously buggy (or amateurishly)...

Please, please increase priority! :-)
Comment 10 Todor Gyumyushev 2017-11-30 10:16:12 UTC
I have the issue too - all previews/thumbnails of image files regardless of their size is pixelated. I'm using folder layout. Maybe is best to have option for user to choose the preview quality.
Comment 11 Alexander Mentyu 2017-12-12 10:12:59 UTC
Confirming in:

Netrunner Rolling
Plasma: 5.11.4
Apps: 17.08.3
Frameworks: 5.40.0
Qt: 5.9.3
Kernel: 4.14.3-1-MANJARO
Comment 12 Eike Hein 2018-02-01 09:13:43 UTC
Patch under review: https://phabricator.kde.or
Comment 13 Eike Hein 2018-02-01 09:15:46 UTC
Sorry, botched copy'n'paste. Correct link: https://phabricator.kde.org/D10223
Comment 14 Eike Hein 2018-02-05 15:09:28 UTC
Git commit db42961ad4d8c87877e549ce63f81b9f2bf7b0b3 by Eike Hein.
Committed on 05/02/2018 at 15:08.
Pushed by hein into branch 'Plasma/5.12'.

Improve preview thumbnail quality

Summary:
This patch does two things:

* Instead of giving the KAbstractViewAdapter the actual icon size,
  we overprovision by giving it the size times two. This is because
  while we're deriving the grid view cell size from the icon size
  setting, it's not the actual size the thumbnails will be displayed
  at. Our IconItem is sized to almost fill the cell, and for image
  sources with non-square aspect ratios IconItem doesn't scale to
  the next icon size.

* We set IconItem to do smooth scaling.

While this results in lovely visual fidelity, I the performance
impact is a concern. We're requesting twice as large thumbnails
now, and we're doing more scaling work. However, thumbnail
generation is async and doesn't slow down listing. There's also
the possibility IconItem::smooth could have general performance
impact unless things are smart enough not to scale when not
necessary, which is hopefully the case.

Reviewers: #plasma

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D10223

M  +2    -0    containments/desktop/package/contents/ui/FolderItemDelegate.qml
M  +1    -1    containments/desktop/package/contents/ui/FolderView.qml
M  +3    -0    containments/desktop/plugins/folder/foldermodel.cpp

https://commits.kde.org/plasma-desktop/db42961ad4d8c87877e549ce63f81b9f2bf7b0b3