Improve preview thumbnail quality

Summary:
This patch does two things:

* Instead of giving the KAbstractViewAdapter the actual icon size,
  we overprovision by giving it the size times two. This is because
  while we're deriving the grid view cell size from the icon size
  setting, it's not the actual size the thumbnails will be displayed
  at. Our IconItem is sized to almost fill the cell, and for image
  sources with non-square aspect ratios IconItem doesn't scale to
  the next icon size.

* We set IconItem to do smooth scaling.

While this results in lovely visual fidelity, I the performance
impact is a concern. We're requesting twice as large thumbnails
now, and we're doing more scaling work. However, thumbnail
generation is async and doesn't slow down listing. There's also
the possibility IconItem::smooth could have general performance
impact unless things are smart enough not to scale when not
necessary, which is hopefully the case.

BUG:376848

Reviewers: #plasma

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D10223